--- a/index.html
+++ b/index.html
@@ -160,12 +160,9 @@ Xbody {
 
   <p class="c3"><span class="c22">Project due Sundary Feb 26 @ 23:59:59 PST</span></p>
 
-
-  <div style="border:1px solid green; padding: 5px; margin-top: 20px; background-color: #dfd; width:55%; font-size: large; border-radius: 10px">
-  This is an individual assignment. If your partner from project 1 has access to your repository, please avoid pushing your project 2 code to github until we have removed this notice. If you want to work on both projects at the same time, this is a good opportunity to learn about <a href="http://gitref.org/branching">branching</a> in git.
-    </div>
   <h2 class="c3 c12"><span class="c19">Updates</span></h2>
   <ul style="color: #0a0">
+<li>2/16 - Github permissions all fixed - you can push now.</li>
   <li>2/14 - Changed access_ok() spec to require returning 0 for NULL dereferences.</li>
   <li>2/14 - Fix bugs in submit check script: run 'git pull proj2 master' to update</li>
   </ul>
