--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@ Xbody {
 
   <h2 class="c3 c12"><span class="c19">Updates</span></h2>
   <ul style="color: #0a0">
+  <li>2/16 - Fixed another bug in submit check script: run 'git pull proj2 master' to update.</li>
 <li>2/16 - Github permissions all fixed - you can push now.</li>
   <li>2/14 - Changed access_ok() spec to require returning 0 for NULL dereferences.</li>
-  <li>2/14 - Fix bugs in submit check script: run 'git pull proj2 master' to update</li>
   </ul>
 
   <h2 class="c3 c12"><span class="c19">Background</span></h2>
