--- a/index.html
+++ b/index.html
@@ -1250,6 +1250,12 @@ $ git pull proj2 master
   get the difference between the reference output and your output, and a
   &ldquo;</span><span class="c5">DISASSEMBLY TEST FAILED!</span><span class="c4">&rdquo;  message. &nbsp;Make sure you pass this test before submitting your first
   task.</span></p>
+  <div style="float: right; margin: 10px">
+<img src="git-basics.png">
+<p>Reminder of how to git works.<br>
+Your local repository is<br>
+indicated by the rectangular outline.</p>
+</div>
 
   <p class="c3"><span class="c5">&nbsp;</span></p>
 
@@ -1286,7 +1292,6 @@ $ git pull proj2 master
   <p class="c3"><span class="c9 c25">This is the end of part 1 of the project. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-1" and push your changes to github:</span></p>
 
   <p class="c3"><span class="c9 c25">&nbsp;</span></p>
-
   <p class="c3"><span class="c16">$ git tag -f proj2-1 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16 c25">$ git push</span></p>
   <p class="c3"><span class="c16 c25">$ git push --tags</span></p>
