--- a/index.html
+++ b/index.html
@@ -193,13 +193,14 @@ Xbody {
 
   <br>
 
-  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote. (If you mess up this step, edit .git/config to fix your git configuration manually)<span></p>
+  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote.<span></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
   <p>
 $ cd ~/Git/cs61c-*
 <br>
+$ git remote rm proj2 <span style="color: red"><i># try to remove proj2 remote in case you added it incorrectly before</i></span><br>
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 <br>
 <br>
