--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@ Xbody {
 
   <br>
 
-  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote.<span></p>
+  <p class="c3"><span class="c4">Navigate to your git repo and add the project2 template as a remote. <span><a style="border: 1px solid blue; background-color: #eef; padding: 3px" href="new-repo.html">Failsafe way of fixing a broken git setup</a></p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
   <p>
 $ cd ~/Git/cs61c-*
 <br>
-$ git remote rm proj2 <span style="color: red"><i># try to remove proj2 remote in case you added it incorrectly before</i></span><br>
+$ git remote rm proj2<br>
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 <br>
 <br>
@@ -1255,7 +1255,10 @@ $ git pull proj2 master
 <img src="git-basics.png">
 <p>Reminder of how to git works.<br>
 Your local repository is<br>
-indicated by the rectangular outline.</p>
+indicated by the rectangular outline.<br>
+Run 'git status' or 'gitk' at any<br>
+time to determine the state<br>
+of your repo.</p>
 </div>
 
   <p class="c3"><span class="c5">&nbsp;</span></p>
