--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Xbody {
   <p>
 $ cd ~/Git/cs61c-*
 <br>
-$ git remote rm proj2<br>
+$ git remote rm proj2 # only if you've messed up remote add before, otherwise you don't have to do this<br>
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 <br>
 <br>
