--- a/index.html
+++ b/index.html
@@ -203,14 +203,13 @@ $ cd ~/Git/cs61c-*
 $ git remote rm proj2 # only if you've messed up remote add before, otherwise you don't have to do this<br>
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 <br>
-<br>
-</p>
-
-  <p class="c3"><span class="c4">Pull the project template into your repo, and take a look at the new files. If the template is updated, you can re-run this command to pull in the latest changes.<span></p>
-  <p>
-<br>
 $ git pull proj2 master
 <br>
+</p>
+<br>
+
+  <p class="c3"><span class="c4">This should have pulled the project files into your repo. If the template is updated, you can re-run the last command to pull in the latest changes, which will have git automatically merge in the updates.<span></p>
+  <p>
 </p>
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
