git rev -> piazza

--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@ of your repo.</p>
   <p class="c3"><span class="c9 c25">This is the end of part 1 of the project. &nbsp;You have now done enough work for the intermediate checkpoint, due on the 19th. For the intermediate milestone, tag the point in history you want to submit as "proj2-1" and push your changes to github:</span></p>
 
   <p class="c3"><span class="c9 c25">&nbsp;</span></p>
-  <p class="c3"><span class="c16">$ git tag -f proj2-1 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
+  <p class="c3"><span class="c16">$ git tag -f proj2-1 <a href="http://piazza.com/class#spring2012/cs61c/610"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16 c25">$ git push</span></p>
   <p class="c3"><span class="c16 c25">$ git push --tags</span></p>
   <p class="c3"><span class="c16">$ make check-part1</span></p>
@@ -1441,7 +1441,7 @@ of your repo.</p>
 
   <p class="c3"><span class="c9">&nbsp;</span></p>
 
-  <p class="c3"><span class="c16">$ git tag -f proj2-2 <a href="http://schacon.github.com/git/gitrevisions.html#_specifying_revisions"><i>&lt;rev&gt;</i></a></span></p>
+  <p class="c3"><span class="c16">$ git tag -f proj2-2 <a href="http://piazza.com/class#spring2012/cs61c/610"><i>&lt;rev&gt;</i></a></span></p>
   <p class="c3"><span class="c16">$ git push</span></p>
   <p class="c3"><span class="c16">$ git push --tags</span></p>
   <p class="c3"><span class="c16">$ make check-part2</span></p>
