--- a/new-repo.html
+++ b/new-repo.html
@@ -8,6 +8,7 @@
 $ cd ~
 $ git clone git@github.com:ucberkeley-cs61c/<span style="color:red">cs61c-<b>XX</b></span>.git <span style="color:blue">NAME_OF_YOUR_NEW_REPO</span>
 $ cd <span style="color:blue">NAME_OF_YOUR_NEW_REPO</span>
+$ test -d proj2 &amp;&amp; rm -rf proj2 &amp;&amp; git add -u &amp;&amp; git commit -m "clean up broken files"
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 $ git pull proj2 master
 </pre>
