--- a/new-repo.html
+++ b/new-repo.html
@@ -8,8 +8,8 @@
 $ cd ~
 $ git clone git@github.com:ucberkeley-cs61c/<span style="color:red">cs61c-<b>XX</b></span>.git <span style="color:blue">NAME_OF_YOUR_NEW_REPO</span>
 $ cd <span style="color:blue">NAME_OF_YOUR_NEW_REPO</span>
-<del>$ test -d proj2 &amp;&amp; rm -rf proj2 &amp;&amp; git add -u &amp;&amp; git commit -m "clean up broken files"</del> Don't do this unless your proj2 folder shows up as a folder with a green arrow on github.
-$ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
+<div style="margin: 3px; background-color: #fee; padding: 3px; border: 1px solid red"><i>Only do this if 'proj2' shows up as an empty folder with a green arrow on github, which can happen if<br>you have accidentally created another git repo inside your existing git repo.</i>
+$ rm -rf proj2 &amp;&amp; git add -u &amp;&amp; git commit -m "delete broken submodule"</div>$ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
 $ git pull proj2 master
 </pre>
 
