--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Xbody {
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
   <p>
-$ cd ~/Git/cs61c-*
+$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>
 <br>
 $ git remote rm proj2 # only if you've messed up remote add before, otherwise you don't have to do this<br>
 $ git remote add proj2 git://github.com/ucberkeley-cs61c/proj2.git
@@ -1087,7 +1087,7 @@ $ git pull proj2 master
 
   <p class="c3"><span class="c5">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make</span></p>
 
@@ -1237,7 +1237,7 @@ $ git pull proj2 master
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make disasmtest</span></p>
 
@@ -1263,7 +1263,7 @@ of your repo.</p>
 
   <p class="c3"><span class="c5">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make disasmtest</span></p>
 
@@ -1336,7 +1336,7 @@ of your repo.</p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make runtest</span></p>
 
@@ -1373,7 +1373,7 @@ of your repo.</p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make</span></p>
 
@@ -1429,7 +1429,7 @@ of your repo.</p>
 
   <p class="c3"><span class="c4">&nbsp;</span></p>
 
-  <p class="c3"><span class="c5">$ cd ~/Git/cs61c-*/proj2</span></p>
+  <p class="c3"><span class="c5">$ cd <a href="where-is-it.html"><i>&lt;REPO&gt;</i></a>/proj2</span></p>
 
   <p class="c3"><span class="c5">$ make</span></p>
 
