--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ Xbody {
 
   <h2 class="c3 c12"><span class="c19">Updates</span></h2>
   <ul style="color: #0a0">
+  <li>2/22 - Four more autograder test cases have been released. You may obtain them by pulling as usual.
+  <li>2/22 - Grades for part 1 are now on glookup.
   <li>2/18 - Updated failsafe git fix instructions to cover empty proj2 dir case.</li>
   <li>2/16 - Fixed another bug in submit check script: run 'git pull proj2 master' to update.</li>
 <li>2/16 - Github permissions all fixed - you can push now.</li>
