--- a/no-submit.html
+++ b/no-submit.html
@@ -10,7 +10,7 @@
 <b>~ $</b> cd <a href="where-is-it.html">&lt;REPO&gt;</a>/proj2
 
 (<span style="color:red">17:05:29 Tue Feb 28 2012</span> <b style="color:yellow">cs61c@hive1 Linux x86_64</b>)
-<b>~/test/proj2 $</b> tar -cvzf .
+<b>~/test/proj2 $</b> tar -cvzf proj2.tgz .
 ./
 ./Makefile
 ./disasm-tests.tar
